<resources>
    <string name="app_name">MyNews</string>
    <string name="error_loading">Error in loading news. Please check your internet connection.</string>

    <!--titles-->
    <string name="tab_0_label">Top News</string>
    <string name="tab_1_label">Most Popular</string>
    <string name="tab_2_label">Politics News</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="splash_label">Splash</string>
    <string name="webpage">Displaying Webpage</string>

    <!--section and subsection names-->
    <string name="section_only">%1$s</string>
    <string name="section_and_subsection">%1$s > %2$s</string>

    <!--checkbox-->
    <string name="arts">Arts</string>
    <string name="automobiles">Automobiles</string>
    <string name="books">Books</string>
    <string name="business">Business</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="obituaries">Obituaries</string>
    <string name="politics">Politics</string>
    <string name="real_estate">Real Estate</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="theater">Theater</string>
    <string name="travel">Travel</string>
    <string name="world">World</string>

    <!--search screen-->
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="save">Save</string>

    <!--menu items-->
    <string name="instructions">Instructions</string>

    <!--notifications-->
    <string name="notification_title">News Found</string>
    <string name="notification_message">%1$d new %2$s items involving %3$s.</string>

    <!--splash fragment-->
    <string name="splash_text">Latest news from NYTimes API</string>

    <!--instructions-->
    <string name="tabs">Tabs</string>
    <string name="tabs1">The app has three tabs: Top News, Most Popular, and Politics News. The app opens in the Top News tab.</string>
    <string name="tabs2">Each tab shows a list of news relevant to the tab.</string>
    <string name="search_button">Search Button</string>
    <string name="search_button1">Clicking the Search Button in the Action Bar displays a search menu with a Query field, Begin Date field, End Date field, and checkboxes for categories.</string>
    <string name="search_button2">Clicking SEARCH shows a list of news relevant to the search criteria.</string>
    <string name="search_button3">Search criteria is saved whenever the SEARCH button is clicked.</string>
    <string name="enabling_notifications">Enabling Notifications</string>
    <string name="enabling_notifications1">Clicking the Notifications option in the Overflow Menu displays a Query field, checkboxes for categories, and a switch to decide whether to enable notifications.</string>
    <string name="enabling_notifications2">Clicking SAVE saves the criteria. If the Notification Switch is turned on when SAVE is clicked, a daily notification is sent if new news matches the criteria.</string>
    <string name="news_list">News List</string>
    <string name="news_list1">News Lists appear when a tab is selected, when a search is performed, or when the app is opened by clicking a notification.</string>
    <string name="news_list2">Clicking an item in a News List displays the relevant webpage for that item.</string>
    <string name="news_list3">Clicking the Back arrow from a Search Result News List takes you back to the Search screen.</string>
    <string name="web_page">Web Page</string>
    <string name="web_page1">A Web page appears when an item in a News List is clicked.</string>
    <string name="web_page2">Clicking the Back arrow from a Web Page takes you back to the News List.</string>
    <string name="loading_from_notifications">Loading From Notifications</string>
    <string name="loading_from_notifications1">Clicking a Notification opens the app to a News List matching what would be displayed if a search were performed using the criteria set when enabling notifications, and using yesterday and today as the Begin Date and End Date.</string>
</resources>