<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    style="@style/sectionName"
                    android:text="@string/tabs" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/tabs1" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/tabs2" />

            <TextView
                    style="@style/sectionName"
                    android:text="@string/search_button" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/search_button1" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/search_button2" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/search_button3" />

            <TextView
                    style="@style/sectionName"
                    android:text="@string/enabling_notifications" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/enabling_notifications1" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/enabling_notifications2" />

            <TextView
                    style="@style/sectionName"
                    android:text="@string/news_list" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/news_list1" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/news_list2" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/news_list3" />

            <TextView
                    style="@style/sectionName"
                    android:text="@string/web_page" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/web_page1" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/web_page2" />

            <TextView
                    style="@style/sectionName"
                    android:text="@string/loading_from_notifications" />

            <TextView
                    style="@style/sectionText"
                    android:text="@string/loading_from_notifications1" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>