<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arts"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/automobiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automobiles"
                    android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/books"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/fashion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/obituaries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obituaries"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/politics"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/realestate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real_estate"
                    android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/technology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technology"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/theater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theater"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/travel"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/world"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/world"
                    android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>