<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/search"
              android:id="@+id/notificationQuery"
              app:layout_constraintBottom_toTopOf="@id/checklist"
              app:layout_constraintTop_toTopOf="parent"/>

    <include layout="@layout/checklist_include"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:id="@+id/checklist"
             app:layout_constraintTop_toBottomOf="@id/notificationQuery"
             app:layout_constraintBottom_toTopOf="@id/notificationText"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/enable_notifications"
              app:layout_constraintTop_toBottomOf="@id/checklist"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/notificationText"/>

    <Switch android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checklist"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/notificationSwitch"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/notificationText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <WebView android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="50dp"
             android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/searchWebView"/>

</androidx.constraintlayout.widget.ConstraintLayout>